# write-powerful-rust-macros

./: .gitignore  Cargo.toml  flake.nix  pre-commit.nix
.github/workflows/: nix-flake-check.yaml
ch3/hello-world/: Cargo.toml
ch3/hello-world-macro/: Cargo.toml
ch3/hello-world-macro/src/: lib.rs
ch3/hello-world/hello-world-macro/: Cargo.toml
ch3/hello-world/src/: main.rs
ch3/src/: main.rs
ch4/: Cargo.toml
ch4/make-public-macro/: Cargo.toml
ch4/make-public-macro/src/: lib.rs
ch4/src/: example.rs  main.rs
ch5/: Cargo.toml
ch5/macros/: Cargo.toml
ch5/macros/src/: lib.rs
ch5/src/: main.rs
ch6/: Cargo.toml
ch6/builder-code/: Cargo.toml
ch6/builder-code/src/: fields.rs  lib.rs
ch6/src/: main.rs
ch6/tests/: panic_when_missing_fields.rs
ch6/tests/fails/: enum.stderr  unnamed.rs  unnamed.stderr
ch7/: Cargo.toml
ch7/panic-to-result-macro/: Cargo.toml
ch7/panic-to-result-macro/src/: lib.rs
ch7/src/: main.rs
ch7/tests/: compile_errors.rs
ch7/tests/fails/: empty_panic.rs  empty_panic.stderr  return_result.rs  return_result.stderr  two_issues.rs  two_issues.stderr
ch8/: Cargo.toml
ch8/analyze/: Cargo.toml
ch8/analyze/src/: lib.rs
ch8/builder-code/: Cargo.toml
ch8/builder-code/src/: fields.rs  lib.rs  utils.rs
ch8/builder-macro/: Cargo.toml
ch8/builder-macro/src/: lib.rs
ch8/src/: main.rs
ch8/tests/: other_macros_analyze.rs
ch8/tests/fails/: missing_prop.rs  no_default.rs  (+2 more)
ch9/: Cargo.toml
ch9/iac-macro/: Cargo.toml
ch9/iac-macro/src/: error.rs  input.rs  lambda.rs  lib.rs  model.rs  s3.rs
ch9/src/: main.rs
(+1 files in other folders)
