[workspace]
resolver = "2"

members = [
  "ch3",
  "ch4",
  "ch5",
  "ch6",
  "ch6/builder-macro",
  "ch6/builder-code",
  "ch7",
  "ch7/panic-to-result-macro",
  "ch8",
  "ch8/builder-macro",
  "ch8/builder-code",
  "ch8/analyze",
]

[workspace.dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
trybuild = "1"
proc-macro-error = "1"
closure = "0.3"
