[package]
name = "iac-macro"
version = "0.1.0"
edition = "2021"

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits"] }
proc-macro2 = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
aws-config = "1.1.1"
aws-sdk-s3 = "1.11.0"
aws-sdk-lambda = "1.9.0"

[lib]
proc-macro = true
